--- a/pearl/dribbleapp/static/index.html
+++ b/pearl/dribbleapp/static/index.html
@@ -3,34 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dribbble Clone</title>
+  <title>Dribbble Clone (Bootstrap Only)</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .hero {
-      background-color: #f8f9fa;
-      text-align: center;
-      padding: 100px 20px;
-    }
-    .hero h1 {
-      font-weight: 700;
-      margin-bottom: 20px;
-    }
-    .shot-card img {
-      width: 100%;
-      border-radius: 8px;
-    }
-    footer {
-      background-color: #212529;
-      color: #fff;
-      padding: 40px 0;
-    }
-  </style>
 </head>
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3">
+  <nav class="navbar navbar-expand-lg bg-white shadow-sm py-3">
     <div class="container">
       <a class="navbar-brand fw-bold text-danger" href="#">dribbble</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -49,9 +29,9 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="hero">
-    <div class="container">
-      <h1 class="display-5 fw-bold">Discover the world’s top designers & creatives</h1>
+  <section class="bg-light text-center py-5">
+    <div class="container py-5">
+      <h1 class="fw-bold display-5 mb-3">Discover the world’s top designers & creatives</h1>
       <p class="lead mb-4">Dribbble is the leading destination to find & showcase creative work.</p>
       <a href="#" class="btn btn-danger btn-lg">Get Started</a>
     </div>
@@ -63,18 +43,18 @@
       <h2 class="mb-4 text-center">Explore Shots</h2>
       <div class="row g-4">
         <div class="col-md-4 col-sm-6">
-          <div class="card shot-card">
-            <img src="https://picsum.photos/400/300?random=1" alt="Shot 1">
+          <div class="card border-0">
+            <img src="https://picsum.photos/400/300?random=1" class="card-img-top rounded" alt="Shot 1">
           </div>
         </div>
         <div class="col-md-4 col-sm-6">
-          <div class="card shot-card">
-            <img src="https://picsum.photos/400/300?random=2" alt="Shot 2">
+          <div class="card border-0">
+            <img src="https://picsum.photos/400/300?random=2" class="card-img-top rounded" alt="Shot 2">
           </div>
         </div>
         <div class="col-md-4 col-sm-6">
-          <div class="card shot-card">
-            <img src="https://picsum.photos/400/300?random=3" alt="Shot 3">
+          <div class="card border-0">
+            <img src="https://picsum.photos/400/300?random=3" class="card-img-top rounded" alt="Shot 3">
           </div>
         </div>
       </div>
@@ -82,12 +62,14 @@
   </section>
 
   <!-- Footer -->
-  <footer class="text-center">
+  <footer class="bg-dark text-white text-center py-4">
     <div class="container">
       <p class="mb-1">&copy; 2025 Dribbble Clone. All rights reserved.</p>
-      <a href="#" class="text-white-50 me-3">Terms</a>
-      <a href="#" class="text-white-50 me-3">Privacy</a>
-      <a href="#" class="text-white-50">Contact</a>
+      <div>
+        <a href="#" class="text-white-50 text-decoration-none me-3">Terms</a>
+        <a href="#" class="text-white-50 text-decoration-none me-3">Privacy</a>
+        <a href="#" class="text-white-50 text-decoration-none">Contact</a>
+      </div>
     </div>
   </footer>
 
